fix visibility from tablet

--- a/src/Components/Account/Body/Body.module.css
+++ b/src/Components/Account/Body/Body.module.css
@@ -18,14 +18,16 @@
     background-color: white;
     display: flex;
     max-width: 90vw;
-    min-height: 56vh;
+    height: auto;
     margin: 2vh 5vw;
     flex-direction: column;
-    justify-content: space-evenly;
+    /*justify-content: space-evenly;*/
     align-items: center;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
 }
 
 img {
-    max-height: 30%;
+    padding: 2vh 0;
+    width: 27vw;
+    height: auto;
 }
