--- a/src/Components/Header/NavBarHeader/Header.module.css
+++ b/src/Components/Header/NavBarHeader/Header.module.css
@@ -11,25 +11,22 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-    height: 7vh;
-    padding: 0 3vw;
-
+    min-height: 7vh;
+    padding: 0 5vw;
 }
 
 .center_element{
     color: #FFF;
     text-align: center;
-    font-size: 2em;
+    font-size: 6.5vw;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
 }
 
-.end_element{
-
-}
-
-.start_element{
-
+.end_element img,
+.start_element img {
+    width: 8vw;
+    height: auto;
+    padding: 1vh 0;
 }
