--- a/src/Components/Register/Body/Body.module.css
+++ b/src/Components/Register/Body/Body.module.css
@@ -1,12 +1,13 @@
 .Body{
     flex: 1 1 auto;
-    padding: 16vh 0 20vh 0;
+    /*padding: 16vh 0 24vh 0;*/
+    margin-top: 16vh;
 }
 
 .Header {
     color: #000;
     text-align: center;
-    font-size: 2.7em;
+    font-size: 9vw;
     font-family: var(--font-family);
     font-weight: 500;
     padding: 3vh;
@@ -17,9 +18,9 @@
     background-color: white;
     display: flex;
     max-width: 90vw;
-    min-height: 56vh;
+    height: auto;
     margin: 2vh 5vw;
     flex-direction: column;
-    justify-content: space-around;
+    /*justify-content: space-around;*/
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
 }
