--- a/src/Components/UI/Button/Button.module.css
+++ b/src/Components/UI/Button/Button.module.css
@@ -4,16 +4,14 @@
     margin: 5vw 15vw;
     display: flex;
     flex-direction: column;
-
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.25);
 }
 
 .Button {
     border-radius: 30px;
-    font-size: 2.5em;
+    font-size: 8vw;
     text-align: center;
     color: #000;
     font-family: var(--font-family);
     font-weight: 500;
-
 }
