--- a/src/Components/UI/Input/Input.module.css
+++ b/src/Components/UI/Input/Input.module.css
@@ -1,7 +1,7 @@
 .Input {
     font-family: var(--font-family);
     font-weight: 300;
-    font-size: 2em;
+    font-size: 6.5vw;
     color: #000;
     padding: 0 1vw;
     border-radius: 30px;
@@ -11,8 +11,8 @@
 .Border {
     border: #1DBCAB solid 4px;
     border-radius: 30px;
-    margin: 1vh 5vw;
-    padding: 0 2vw;
+    margin: 2.5vh 5vw;
+    padding: 0 4vw;
     display: flex;
     flex-direction: column;
 
