--- a/src/Components/UI/PlaceHolder/PlaceHolder.module.css
+++ b/src/Components/UI/PlaceHolder/PlaceHolder.module.css
@@ -1,6 +1,7 @@
 .PlaceHolder {
     color: #000;
     font-family: var(--font-family);
-    font-size: 2.3em;
+    font-size: 7vw;
     font-weight: 500;
+    padding-bottom: 4vh;
 }
